--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,7 @@ jobs:
 
     runs-on: github-runners-bstock84-hdhr2xml
     env:
-      IMAGE_NAME: ${{ var.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
+      IMAGE_NAME: ${{ env.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
     permissions:
       contents: read
       packages: write
