--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,8 +17,6 @@ jobs:
   build:
 
     runs-on: github-runners-bstock84-hdhr2xml
-    env:
-      IMAGE_NAME: ${{ env.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
     permissions:
       contents: read
       packages: write
@@ -60,7 +58,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ vars.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
